--- a/index.html
+++ b/index.html
@@ -19,11 +19,11 @@
         <tr bgcolor="slateblue">
             <td colspan="2"><b>22361085 이희주</b></td>
             <th colspan="2">
-                <a href=forecast.html>일기예보</a> 
+                <a href=./forecast.html>일기예보</a> 
                 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-                <a href=form.html>폼양식</a> 
+                <a href=./form.html>폼양식</a> 
                 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-                <a href=question.html>문의게시판</a></th>
+                <a href=./question.html>문의게시판</a></th>
         </tr>
         <tr bgcolor="gainsboro">
             <td colspan="5"><b><big>계정 생성하기</b></big><br><small><small><b>Home</b> / 계정 생성하기 
